<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddOrderActivity">


  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      >
      <com.google.android.material.textfield.TextInputLayout
          android:hint="@string/request_description"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="@dimen/_10sdp"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
          <com.google.android.material.textfield.TextInputEditText
              android:id="@+id/add_order_request_description"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:inputType="text"
              />
      </com.google.android.material.textfield.TextInputLayout>
      <com.google.android.material.textfield.TextInputLayout
          android:hint="@string/phone_number"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="@dimen/_10sdp"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
          <com.google.android.material.textfield.TextInputEditText
              android:id="@+id/add_order_phone_number"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:inputType="phone"
              />
      </com.google.android.material.textfield.TextInputLayout>
      <com.google.android.material.textfield.TextInputLayout
          android:hint="@string/first_location"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="@dimen/_10sdp"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
          <com.google.android.material.textfield.TextInputEditText
              android:id="@+id/add_order_first_location"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:inputType="text"
              />
      </com.google.android.material.textfield.TextInputLayout>
      <com.google.android.material.textfield.TextInputLayout
          android:hint="@string/last_location"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="@dimen/_10sdp"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
          <com.google.android.material.textfield.TextInputEditText
              android:id="@+id/add_order_last_location"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:inputType="text"
              />
      </com.google.android.material.textfield.TextInputLayout>
      <com.google.android.material.textfield.TextInputLayout
          android:hint="@string/date"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="@dimen/_10sdp"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
          <com.google.android.material.textfield.TextInputEditText
              android:id="@+id/add_order_date"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:inputType="text"
              />
      </com.google.android.material.textfield.TextInputLayout>
      <com.google.android.material.textfield.TextInputLayout
          android:hint="@string/time"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_margin="@dimen/_10sdp"
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
          <com.google.android.material.textfield.TextInputEditText
              android:id="@+id/add_order_time"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:inputType="text"
              />
      </com.google.android.material.textfield.TextInputLayout>
      <com.google.android.material.button.MaterialButton
          android:id="@+id/add_order_btn"
          app:icon="@drawable/ic_add"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          app:cornerRadius="@dimen/_10sdp"
          android:elevation="@dimen/_2sdp"
          app:iconGravity="textStart"
          android:layout_margin="@dimen/_10sdp"
          android:text="@string/add_order"
          android:textAllCaps="false"
          />


  </LinearLayout>


</ScrollView>